# dewkit

./: .env.dev  .gitignore  README.md  go.mod  go.sum  index.html  jsconfig.json  main.go  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  schema.sql  seed.sql  vite.config.js
cmd/: add_superuser.go  db_migrate.go  db_schema_sync.go  install.go  root.go  runserver.go
config/: datastore.go  environment.go
config/db/: schema.sql
config/middlewares/: auth.go  datastore.go  db.go  project.go
dewkit/: apps.py  asgi.py  celery.py  render.py  urls.py  wsgi.py
dewkit/models/: account.py  organization.py  shared.py  user.py
dewkit/settings/: __init__.py  apps.py  auth.py  base.py  celery.py  database.py
docs/: index.md  roadmap.md
docs/.vitepress/: config.js
docs/guide/: architecture.md  configuration.md  deploying-aws-eb.md  deploying-heroku.md  deployment.md  inbox.md  installation.md  local-development.md  operations.md  overview.md  running.md  tickets.md  troubleshooting.md  users-roles.md  why-dewkit.md
internal/auth/: dto.go  handlers.go  routes.go  service.go
internal/conversations/: dto.go  handlers.go  routes.go  service.go  types.go
internal/handlers/: auth.go  router.go
internal/models/: common.go
internal/projects/: consumers.go  dto.go  handlers.go  routes.go  service.go  types.go
internal/transport/: consumers.go  dto.go  handlers.go  models.go  routes.go  service.go  types.go
internal/utils/: event.go  generator.go  parsers.go
web/: App.vue  http.js  main.js  router.js  transport.js
web/composables/: useImboxSocket.js
(+25 files in other folders)
